# VruksSkinEditor

./: .clangd  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/MDLFile/: MDLFile.cpp  MDLFile.h  MDLFileFactory.cpp  MDLFileFactory.h
src/MDLFile/V48/: MDLFile_V48.h  MDLFile_v48.cpp
src/WindowSections/: KeyValuesText.cpp  KeyValuesText.h  MDLFileTab.cpp  MDLFileTab.h  SkinEditorWindow.cpp  SkinEditorWindow.h  SkinTable.cpp  SkinTable.h  TexturesTable.cpp  TexturesTable.h
